force-app/main/default/objects/dw_time_lu_period__x/dw_time_lu_period__x.object-meta.xml
<CustomObject>
    <description>dw_time$lu_period</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_time$lu_period</externalName>
    <label>dw_time$lu_period</label>
    <pluralLabel>dw_time$lu_period</pluralLabel>
</CustomObject>