force-app/main/default/objects/dw_time_lu_period__x/fields/closed_ind__c.field-meta.xml
<CustomField>
    <fullName>closed_ind__c</fullName>
    <description>closed_ind</description>
    <externalDeveloperName>closed_ind</externalDeveloperName>
    <label>closed_ind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>