force-app/main/default/objects/dw_time_lu_period__x/fields/fiscal_yr__c.field-meta.xml
<CustomField>
    <fullName>fiscal_yr__c</fullName>
    <description>fiscal_yr</description>
    <externalDeveloperName>fiscal_yr</externalDeveloperName>
    <label>fiscal_yr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>