force-app/main/default/objects/dw_time_lu_period__x/fields/period_end_dt__c.field-meta.xml
<CustomField>
    <fullName>period_end_dt__c</fullName>
    <description>period_end_dt</description>
    <externalDeveloperName>period_end_dt</externalDeveloperName>
    <label>period_end_dt</label>
    <type>Date</type>
</CustomField>