force-app/main/default/objects/dw_time_lu_period__x/fields/period_id__c.field-meta.xml
<CustomField>
    <fullName>period_id__c</fullName>
    <description>period_id</description>
    <externalDeveloperName>period_id</externalDeveloperName>
    <label>period_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>